<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:clipToOutline="true"
    android:background="@drawable/login">
    <!-- login -->
    <!-- shape -->


    <ImageView
        android:id="@+id/slice_2"
        android:layout_width="259dp"
        android:layout_height="206dp"
        android:layout_marginTop="80dp"
        android:background="#00000000"
        android:src="@drawable/undraw_my_notifications_rjej"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintBottom_toTopOf="@+id/slice_2"
        app:layout_constraintEnd_toEndOf="@+id/slice_2"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/slice_2" />

    <EditText

        android:id="@+id/email_login"
        android:layout_width="325dp"
        android:layout_height="51dp"
android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textColorHint="#90000000"
        android:hint="Enter your email"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputf"
        app:layout_constraintEnd_toEndOf="@+id/slice_2"
        app:layout_constraintStart_toStartOf="@+id/slice_2"
        app:layout_constraintTop_toBottomOf="@+id/slice_2" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:textColorHint="#90000000"
        android:hint="Enter your Password"
        android:layout_alignParentLeft="true"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:background="@drawable/inputf"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <TextView
        android:id="@+id/forgotPassword_login"
        android:layout_width="128dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/forgot_pass"
        android:textColor="@color/white"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <ImageButton
        android:id="@+id/signin_button"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/don_t_have_login"
        android:layout_width="253dp"
        android:layout_height="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signin_button"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/signin_button"
        app:layout_constraintVertical_bias="0.46" />

    <ImageView
        android:id="@+id/shape"
        android:layout_width="290dp"
        android:layout_height="270dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="@+id/slice_2"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

